--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,14 @@ buildscript {
         appCompatVersion = '1.1.0'
         gradleVersion = '3.6.3'
         coroutines = '1.3.2'
-        lifecycle_version = '2.3.0-alpha01'
+        lifecycle_version = '2.3.0-alpha02'
+        preference_version = '1.1.1'
 
         lifecycleVersion = '1.1.1'
         retrofitVersion = '2.8.1'
         dagger2Version = '2.16'
         coroutines = '1.3.2'
-        nav_version = "2.3.0-alpha05"
+        nav_version = "2.3.0-alpha06"
         picassoVersion = '2.71828'
 
         android_support_version = '28.0.0-alpha3'
