--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     implementation "androidx.preference:preference-ktx:$preference_version"
 
 
+    // Kotlin + coroutines
+    implementation "androidx.work:work-runtime-ktx:$workManager"
+
     testImplementation 'junit:junit:4.12'
     testImplementation "io.mockk:mockk:$mockkVersion"
 
