--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
         lifecycle_version = '2.3.0-alpha02'
         preference_version = '1.1.1'
 
+        workManager = "2.3.4"
+
         lifecycleVersion = '1.1.1'
         retrofitVersion = '2.8.1'
         dagger2Version = '2.16'
