--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,4 +108,8 @@ dependencies {
 
     //Picasso
     implementation "com.squareup.picasso:picasso:$picassoVersion"
+
+    //Lottie
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
 }
