--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
         coroutines = '1.3.2'
         nav_version = "2.3.0-alpha06"
         picassoVersion = '2.71828'
+        lottieVersion = '3.4.0'
 
         android_support_version = '28.0.0-alpha3'
 
