--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         appCompatVersion = '1.1.0'
         gradleVersion = '3.6.3'
         coroutines = '1.3.2'
-        lifecycle_version = '2.3.0-alpha02'
+        lifecycle_version = '2.3.0-alpha03'
         preference_version = '1.1.1'
 
         workManager = "2.3.4"
@@ -16,7 +16,7 @@ buildscript {
         retrofitVersion = '2.8.1'
         dagger2Version = '2.16'
         coroutines = '1.3.2'
-        nav_version = "2.3.0-alpha06"
+        nav_version = "2.3.0-beta01"
         picassoVersion = '2.71828'
         lottieVersion = '3.4.0'
 
@@ -30,15 +30,16 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'io.fabric.tools:gradle:1.31.2'
     }
 }
 
