--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation "androidx.preference:preference-ktx:$preference_version"
     implementation 'com.google.firebase:firebase-analytics:17.4.2'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation "androidx.cardview:cardview:1.0.0"
 
 
     // Kotlin + coroutines
