--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,10 +15,15 @@ android {
         minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "$appMajorVersion.$appMinorVersion.$appPatchVersion"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+    applicationVariants.all { variant ->
+        variant.resValue "string", "versionName", variant.versionName
+    }
+
     dataBinding {
         enabled = true
     }
@@ -48,19 +53,20 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.navigation:navigation-fragment:2.2.2'
-    implementation 'androidx.navigation:navigation-ui:2.2.2'
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+    implementation "androidx.navigation:navigation-fragment:$navigationVersion"
+    implementation "androidx.navigation:navigation-ui:$navigationVersion"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
-    implementation "com.android.support:appcompat-v7:$android_support_version"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    implementation "androidx.preference:preference-ktx:$preference_version"
+    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycleVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    implementation "com.android.support:appcompat-v7:$androidSupportVersion"
+
+    implementation "androidx.preference:preference-ktx:$preferenceVersion"
     implementation 'com.google.firebase:firebase-analytics:17.4.2'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation "androidx.cardview:cardview:1.0.0"
@@ -76,18 +82,18 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
 
     // RecyclerView
-    implementation "com.android.support:recyclerview-v7:$android_support_version"
+    implementation "com.android.support:recyclerview-v7:$androidSupportVersion"
 
     // Constraint Layout
-    implementation "com.android.support.constraint:constraint-layout:1.1.3"
+    implementation "com.android.support.constraint:constraint-layout:$constraintLayoutVersion"
 
     //LiveData & ViewModel
-    implementation "android.arch.lifecycle:extensions:$lifecycleVersion"
-    testImplementation "android.arch.core:core-testing:$lifecycleVersion"
+    implementation "android.arch.lifecycle:extensions:$lifedataVersion"
+    testImplementation "android.arch.core:core-testing:$lifedataVersion"
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
@@ -99,7 +105,7 @@ dependencies {
     compileOnly "org.glassfish:javax.annotation:3.1.1"
 
     //Support Design
-    implementation "com.android.support:design:$android_support_version"
+    implementation "com.android.support:design:$androidSupportVersion"
 
     //Room
     implementation "android.arch.persistence.room:runtime:$roomVersion"
