--- a/build.gradle
+++ b/build.gradle
@@ -7,24 +7,29 @@ buildscript {
         appCompatVersion = '1.1.0'
         gradleVersion = '4.0.0'
         coroutines = '1.3.2'
-        lifecycle_version = '2.3.0-alpha03'
-        preference_version = '1.1.1'
+        lifecycleVersion = '2.3.0-alpha03'
+        preferenceVersion = '1.1.1'
 
         workManager = "2.3.4"
 
-        lifecycleVersion = '1.1.1'
+        lifedataVersion = '1.1.1'
         retrofitVersion = '2.8.1'
         dagger2Version = '2.16'
         coroutines = '1.3.2'
-        nav_version = "2.3.0-beta01"
+        navVersion = "2.3.0-beta01"
+        navigationVersion = '2.2.2'
         picassoVersion = '2.71828'
         lottieVersion = '3.4.0'
 
-        android_support_version = '28.0.0-alpha3'
+        androidSupportVersion = '28.0.0-alpha3'
 
         roomVersion = '1.1.1'
 
         mockkVersion = '1.10.0'
+
+        appMajorVersion = '0'
+        appMinorVersion = '9'
+        appPatchVersion = '0'
     }
 
     repositories {
@@ -37,7 +42,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navVersion"
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'io.fabric.tools:gradle:1.31.2'
     }
