--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_app_logo"
         android:label="@string/app_name"
+        android:roundIcon="@drawable/ic_app_logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity android:name=".ui.MainActivity" >
